@@ -14,10 +14,7 @@ import no.nav.organisasjonforvalter.jpa.repository.OrganisasjonRepository;
 import no.nav.organisasjonforvalter.jpa.repository.StatusRepository;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
-import org.springframework.web.server.ResponseStatusException;
-import reactor.core.publisher.Flux;
-import reactor.core.publisher.Mono;
-import reactor.core.scheduler.Schedulers;
+import org.springframework.web.client.HttpClientErrorException;
 
 import java.util.Collection;
 import java.util.List;
@@ -43,72 +40,66 @@ public class OrdreService {
     private final StatusRepository statusRepository;
     private final MiljoerServiceConsumer miljoerServiceConsumer;
 
-    public Mono<DeployResponse> deploy(DeployRequest request) {
+    public DeployResponse deploy(DeployRequest request) {
 
-        return miljoerServiceConsumer.getOrgMiljoer()
-                .flatMap(tilgjengeligeMiljoer -> {
-                    request.getEnvironments().forEach(miljoe -> {
-                        if (tilgjengeligeMiljoer.stream().noneMatch(tilgjengelig -> tilgjengelig.equals(miljoe))) {
-                            throw new ResponseStatusException(BAD_REQUEST, format("Miljoe %s eksisterer ikke", miljoe));
-                        }
-                    });
+        var tilgjengeligeMiljoer = miljoerServiceConsumer.getOrgMiljoer();
+        request.getEnvironments().forEach(miljoe -> {
+            if (tilgjengeligeMiljoer.stream().noneMatch(tilgjengelig -> tilgjengelig.equals(miljoe))) {
+                throw new HttpClientErrorException(BAD_REQUEST, format("Miljoe %s eksisterer ikke", miljoe));
+            }
+        });
 
-                    return Mono.fromCallable(() -> organisasjonRepository.findAllByOrganisasjonsnummerIn(request.getOrgnumre()))
-                            .subscribeOn(Schedulers.boundedElastic());
-                })
-                .flatMap(organisasjoner -> {
-                    if (organisasjoner.isEmpty()) {
-                        return Mono.error(new ResponseStatusException(HttpStatus.NOT_FOUND, format("Ingen organisasjoner %s funnet!",
-                                String.join(",", request.getOrgnumre()))));
-                    }
+        List<Organisasjon> organisasjoner = organisasjonRepository.findAllByOrganisasjonsnummerIn(request.getOrgnumre());
+        if (organisasjoner.isEmpty()) {
+            throw new HttpClientErrorException(HttpStatus.NOT_FOUND, format("Ingen organisasjoner %s funnet!",
+                    String.join(",", request.getOrgnumre())));
+        }
 
-                    return Flux.fromIterable(organisasjoner)
-                            .flatMap(organisasjon -> Flux.fromIterable(request.getEnvironments())
-                                    .flatMap(env -> {
-                                        String uuid = UUID.randomUUID().toString();
-                                        return deployOrganisasjon(uuid, organisasjon, env)
-                                                .then(Mono.fromCallable(() -> statusRepository.save(Status.builder()
+        return DeployResponse.builder()
+                .orgStatus(organisasjoner.stream()
+                        .collect(Collectors.toMap(Organisasjon::getOrganisasjonsnummer,
+                                organisasjon -> request.getEnvironments().stream().map(env -> {
+                                            String uuid = UUID.randomUUID().toString();
+                                            try {
+                                                deployOrganisasjon(uuid, organisasjon, env);
+                                                statusRepository.save(Status.builder()
                                                         .uuid(uuid)
                                                         .organisasjonsnummer(organisasjon.getOrganisasjonsnummer())
                                                         .miljoe(env)
-                                                        .build())).subscribeOn(Schedulers.boundedElastic()))
-                                                .map(saved -> EnvStatus.builder()
+                                                        .build());
+                                                return EnvStatus.builder()
                                                         .status(OK)
                                                         .environment(env)
-                                                        .build())
-                                                .onErrorResume(e -> {
-                                                    log.error(e.getMessage(), e);
-                                                    return Mono.just(EnvStatus.builder()
-                                                            .status(ERROR)
-                                                            .details(e.getMessage())
-                                                            .environment(env)
-                                                            .build());
-                                                })
-                                                .map(envStatus -> Map.entry(organisasjon.getOrganisasjonsnummer(), envStatus));
-                                    }))
-                            .collectList()
-                            .map(entries -> DeployResponse.builder()
-                                    .orgStatus(entries.stream()
-                                            .collect(Collectors.groupingBy(Map.Entry::getKey,
-                                                    Collectors.mapping(Map.Entry::getValue, Collectors.toList()))))
-                                    .build());
-                });
+                                                        .build();
+                                            } catch (RuntimeException e) {
+                                                log.error(e.getMessage(), e);
+                                                return EnvStatus.builder()
+                                                        .status(ERROR)
+                                                        .details(e.getMessage())
+                                                        .environment(env)
+                                                        .build();
+                                            }
+                                        })
+                                        .toList())))
+                .build();
     }
 
-    private Mono<Void> deployOrganisasjon(String uuid, Organisasjon organisasjon, String env) {
+    private void deployOrganisasjon(String uuid, Organisasjon organisasjon, String env) {
 
-        return organisasjonServiceConsumer.getStatus(organisasjon.getOrganisasjonsnummer(), env)
-                .collectList()
-                .flatMap(orgStatus -> {
-                    if (isNull(orgStatus) || orgStatus.stream()
-                            .map(Map::entrySet)
-                            .flatMap(Collection::stream)
-                            .allMatch(org -> isBlank(org.getValue().getOrgnummer()))) {
+        var orgStatus = organisasjonServiceConsumer.getStatus(organisasjon.getOrganisasjonsnummer(), env)
+                        .collectList()
+                        .block();
 
-                        return organisasjonMottakConsumer.opprettOrganisasjon(uuid, organisasjon, env);
-                    } else {
-                        return organisasjonMottakConsumer.endreOrganisasjon(uuid, organisasjon, env);
-                    }
-                });
+        if (isNull(orgStatus) || orgStatus.stream()
+                .map(Map::entrySet)
+                .flatMap(Collection::stream)
+                .allMatch(org -> isBlank(org.getValue().getOrgnummer()))) {
+
+            organisasjonMottakConsumer.opprettOrganisasjon(uuid, organisasjon, env);
+
+        } else {
+
+            organisasjonMottakConsumer.endreOrganisasjon(uuid, organisasjon, env);
+        }
     }
 }
